--- a/src/main/webapp/resources/css/brand_style.css
+++ b/src/main/webapp/resources/css/brand_style.css
@@ -1,5 +1,6 @@
 .brand_images {
-	margin: 250px auto 60px auto;
+	padding-top: 250px;
+	margin: 0px auto 60px auto;
 }
 
 td {
@@ -81,16 +82,6 @@ body {
 #brand_search a {
 	text-decoration: none;
 	color: black;
-}
-
-.brand_name {
-	scroll-behavior: smooth;
-	display: block;
-	/* text-align: center; */
-	margin: auto;
-	overflow-y: scroll;
-	/* width: 350px; */
-	/* height: 250px; */
 }
 
 .brand_name a {
