--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                        	
+                                            	
+    
     
     
     
@@ -10,7 +11,8 @@
     
     
     <wb-module deploy-name="sprj09replyboard">
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -21,7 +23,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -32,7 +35,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -43,7 +47,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                		
+                                                                                        		
+        
         
         
         
@@ -54,7 +59,10 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                		
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                                                                                        		
+        
         
         
         
@@ -65,8 +73,10 @@
         
         
         <property name="java-output-path" value="target/classes"/>
+                
         <property name="context-root" value="project_shopping_mall22"/>
-                                                                                	
+                                                                                        	
+    
     
     
     
@@ -77,7 +87,8 @@
     
     
     </wb-module>
-                                        
+                                            
+
 
 
 
