오전작업으로 롤백 -jong
은주 : 살려주세요

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -73,8 +73,7 @@
         
         
         <property name="java-output-path" value="target/classes"/>
-                
-        <property name="context-root" value="project_shopping_mall22"/>
+        <property name="context-root" value="project_shopping_mall"/>
                                                                                         	
     
     
