--- a/src/main/webapp/resources/css/cs/inquiry.css
+++ b/src/main/webapp/resources/css/cs/inquiry.css
@@ -28,8 +28,10 @@
 .save_button{
 	background-color: black;
 	color: white;
-	width: 200px;
-	font-size: 50px;
+	width: 150px;
+	height: 50px;
+	font-size: 20px;
+	
 }
 
 .inquiry_table th {
@@ -37,6 +39,17 @@
 	font-size: 18px;
 	padding-left: 8px;
 	
+}
+
+.inquiry2_main{
+	color: #333;
+    font-size: 15px;
+    line-height: 15px;
+    text-align: center;
+    padding-top: 100px;
+    color: gray;
+    margin-bottom: 100px;
+   
 }
 
 
