--- a/src/main/webapp/resources/css/brand_style.css
+++ b/src/main/webapp/resources/css/brand_style.css
@@ -12,7 +12,7 @@ body {
 	background: #ffffff;
 }
 
-.box {
+/* .box {
 	margin: 60px auto 80px auto;
 	width: 290px;
 	height: 50px;
@@ -45,12 +45,12 @@ body {
 }
 
 .container-1 input#search:-moz-placeholder {
-	/* Firefox 18- */
+	Firefox 18-
 	color: #65737e;
 }
 
 .container-1 input#search::-moz-placeholder {
-	/* Firefox 19+ */
+	Firefox 19+
 	color: #65737e;
 }
 
@@ -71,7 +71,7 @@ body {
 	.container-1 input#search:active {
 	outline: none;
 	background: #ffffff;
-}
+} */
 
 /*  */
 #brand_search {
@@ -104,5 +104,43 @@ body {
 
 .brand_table {
 	border: 1;
-	margin: 180px auto 60px auto;
+	margin: 100px auto 60px auto;
+}
+
+a {
+	color: #1fcfcb;
+	font-family: 'Lato';
+}
+
+a:hover {
+	color: #fff;
+}
+
+#back-to-top {
+	position: fixed;
+	bottom: 3em;
+	right: 3em;
+	background-color: rgba(255, 255, 255, .9);
+	color: #313943;
+	border: none;
+	border-radius: 5px;
+	padding: 1em;
+	text-transform: uppercase;
+	cursor: pointer;
+	font-weight: 700;
+	box-shadow: 0 0 2em 0 rgba(0, 0, 0, .25);
+	transition: all .3s ease-in-out;
+	display: inline-block;
+	opacity: 0;
+	text-decoration: none;
+	font-size: .75em;
+}
+
+#back-to-top:hover {
+	background-color: #fff;
+	padding: 1em 3em;
+}
+
+#back-to-top.visible {
+	opacity: 1;
 }
