--- a/src/main/webapp/resources/css/brand1_style.css
+++ b/src/main/webapp/resources/css/brand1_style.css
@@ -131,6 +131,15 @@
 	margin-right: auto;
 }
 
+.product-list-style{
+	position: relative;
+    top: 20px;
+    padding: 10px 10px;
+    margin: 0px 0px 30px 10px;
+    background: #f7f7f7;
+    color: #4b4b4b;	
+    text-decoration: none;
+}
 .products h3 {
 	font-size: 24px;
 	color: #545454;
@@ -149,6 +158,7 @@
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-bottom: 30px;
+	margin-top: 40px;
 }
 
 .product-name {
