--- a/src/main/webapp/resources/css/cs/faq.css
+++ b/src/main/webapp/resources/css/cs/faq.css
@@ -18,7 +18,7 @@
 }
 
 .faqboard_header {
-	width: 24%;
+	width: 17%;
 	
 }
 
@@ -26,6 +26,14 @@
 	color:red;
 }
 
+.faqtoggle:hover{
+	background-color: #f5f5f5;
+	font-weight: bold;
+}
+
+.faqboard_title {
+	width: 70%
+}
 
 .faqboard_button {
 	font-size: 18x;
@@ -33,3 +41,20 @@
 	background-color: white;
 }
 
+.faqcontent {
+	/* padding-left: 200px; */
+	display:none;
+}
+.faqcontent2{
+}
+.faqtoggle {
+	
+}
+
+pre { 
+/* white-space: -moz-pre-wrap;   */
+/* white-space: -pre-wrap; Opera  */
+/* white-space: -o-pre-wrap Opera  */
+white-space: pre-wrap;  
+word-wrap: break-word; /* IE 5.5+ */ 
+}
