--- a/src/main/webapp/resources/css/cs/enter.css
+++ b/src/main/webapp/resources/css/cs/enter.css
@@ -57,26 +57,6 @@
     
 }
 
-.circle {
-    display: flex;
-    justify-content: center;
-    background-color: #000;
-    color: white;
-    font-size: 20px;
-    font-weight: 600;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    text-align: center;
-    align-content: space-around;
-   
-}
-
-.circle p {
-    margin-top: 10px;
-
-}
-
 .addr_btn {
 	background-color: black;
 	color: white;
@@ -97,4 +77,15 @@
 
 #sample6_detailAddress{
 	width: 45%	
+}
+
+.enter_guide {
+	color: #888;
+	font-size: 18px;
+	margin: 20px 0;
+	
+}
+
+li {
+	list-style:disc;
 }
