8/10 메인페이지 수정

--- a/src/main/webapp/resources/css/cs/inquiry.css
+++ b/src/main/webapp/resources/css/cs/inquiry.css
@@ -22,8 +22,11 @@
 	resize: none;
 	font-size: 18px;
 }
+.inquiry_btn {
+	text-align: center;
+}
 
-.save_button{
+.save_btn{
 	background-color: black;
 	color: white;
 	width: 150px;
